# pydantic-custom-type-adapter

./: CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: docs-and-format.yml  publish.yml
docs/: index.html
docs/pydantic_custom_type_adapter/: index.html
docs/pydantic_custom_types/: index.html
pydantic_custom_type_adapter/: __init__.py
pydantic_custom_types/: __init__.py
tests/: conftest.py  test_basic_adapters.py  test_complex_models.py  test_edge_cases.py  test_error_cases.py  test_serialization.py
tests/custom_types/: __init__.py  box.py  coordinates.py  email.py  point.py  safe_string.py  timestamp.py  tree_node.py  user_id.py
